# scientific-graph-agent

./: .gitignore  EXTENSION_NOTES.md  README.md  eval_consistency.py  langgraph.json  pyproject.toml  run_demo.py  run_spectral_demo.py
docs/superpowers/plans/: 2026-06-24-scientific-graph-agent-extension.md  2026-06-27-domain-knowledge-graph.md  2026-07-01-quantitative-evidence-integration.md  2026-07-03-assurance-harness-phase1-core.md  2026-07-04-assurance-harness-phase2-deepeval.md  2026-07-05-assurance-harness-phase2-security.md  2026-07-07-sga-portfolio-step2.md
docs/superpowers/specs/: 2026-06-27-domain-knowledge-graph-design.md  2026-06-30-summarizer-gepa-optimization-design.md  2026-07-03-assurance-harness-design.md
notebooks/: demo_long_term_memory.ipynb
src/agent_graph/: __init__.py  graph.py  llm.py  nodes.py  reranker.py  schemas.py  state.py  tools.py
src/agent_graph/app/: __init__.py  __main__.py  analysis.py  app.py
src/agent_graph/eval/: __init__.py  answer_relevance.py  consistency.py  faithfulness.py
src/agent_graph/finetune/: __init__.py  dataset.py  train.py
src/agent_graph/kg/: __init__.py  confidence.py  confidence_toolkit.py  extract.py  ontology.py  protocol.py  rdfstar_store.py
src/agent_graph/optimize/: __init__.py  harvest_and_optimize.py  metric.py  program.py  run_gepa.py
src/agent_graph/spectral/: __init__.py  centrality.py  communities.py  gnn.py  gpu.py  graph_adapter.py  laplacian.py  snapshots.py  transport.py
src/paper_recommender/: __init__.py  graph.py  nodes.py  state.py  tools.py
tests/: test_app_analysis.py  test_dual_audience_prompt.py  test_faithfulness_single.py  test_finetune_dataset.py  test_finetune_train.py  test_gepa_metric.py  test_gepa_program.py  test_kg_builder_node.py  test_kg_confidence.py  test_kg_confidence_toolkit.py  test_kg_extract.py  test_kg_ontology.py  test_kg_store_persist.py  test_kg_store_query.py  test_kg_store_write.py  test_kg_wiring.py  test_llm_factory.py  test_pubmed.py  test_pubmed_abstract.py  test_pubmed_retry.py  test_schemas.py  test_spectral_adapter.py  test_spectral_centrality.py  test_spectral_communities.py  test_spectral_gnn.py  test_spectral_gpu.py  test_spectral_laplacian.py  test_spectral_snapshots.py  test_spectral_transport.py  test_validate_output.py
