[project]
name = "scientific-graph-agent"
version = "0.1.0"
description = "Simple agent graph for scientific paper exploration with memory"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langsmith>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "arxiv>=2.0.0",
    "wikipedia>=1.4.0",
    "python-dotenv>=1.0.0",
    "pyoxigraph>=0.5",
    "networkx>=3.2",
    "scipy>=1.11",
    "langchain>=0.3.0",
    "aiosqlite",
    "pytest>=7.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
leiden = ["python-igraph>=0.11", "leidenalg>=0.10"]
gpu = ["cugraph-cu12>=24.06"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
